import {FileId} from "./FileId";

export interface File {
    id: FileId
    details: string
}