export interface FileId {
    readonly value: string
}