
@startuml

interface FileService {
  + saveFile(file: File): FileId
  + getFile(fileId: FileId): File
  + deleteFile(fileId: FileId): void
}

FileService --> FileRepository : uses
FileService --> FileFactory : uses

interface FileRepository {
  + saveFile(file: File): FileId
  + getFile(fileId: FileId): File
  + deleteFile(fileId: FileId): void
}
note top of FileRepository : The implementation of this interface will be done using IPFS

FileRepository o-- File

interface FileFactory {
      + fileFrom(fileId: string, otherFileDetails: string): File
}
FileFactory -left-> File : creates

interface File {
    + getId(): FileId
    + getOtherFileDetails(): string
}
note bottom of File : Entity -> Other details will be added later

interface FileId {
    + getValue(): string
}

FileId -right-> File : identifies

@enduml
